--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "rmmz-typescript-plugin-archetype",
+  "name": "schach-fog-of-war",
   "version": "1.0.0",
   "description": "RPG Maker MZ Typescript Plugin Archetype",
-  "namespace": "Comuns.Typescript.Archetype",
+  "namespace": "Schach.FogOfWar",
+  "testProjectDir": "../..",
   "scripts": {
+    "lint": "eslint .",
     "prebuild": "mz-mtdt -i ./plugin-metadata.yaml -o dist/annotations.js",
     "build": "rollup -c",
     "test": "ts-node node_modules/jasmine/bin/jasmine",
@@ -11,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/comuns-rpgmaker/typescript-plugin-archetype"
+    "url": "https://github.com/comuns-rpgmaker/schach-fog-of-war"
   },
   "keywords": [
     "RMMZ"
@@ -21,17 +23,20 @@
   "devDependencies": {
     "@comuns-rpgmaker/plugin-metadata": "^0.2.5",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
+    "@rollup/plugin-replace": "^4.0.0",
     "@rollup/plugin-typescript": "^5.0.2",
     "@types/jasmine": "^3.10.6",
     "@types/node": "^14.18.21",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "eslint": "^7.32.0",
+    "glslify": "^7.1.1",
     "jasmine": "^3.99.0",
     "nyc": "^15.1.0",
     "rmmz": "github:niokasgami/rpg-maker-mz-typescript",
     "rollup": "^2.76.0",
     "rollup-plugin-external-globals": "^0.6.1",
+    "rollup-plugin-glslify": "^1.3.0",
     "rollup-plugin-terser": "^7.0.2",
     "ts-node": "^9.1.1",
     "tslib": "^2.4.0",
