--- a/.github/workflows/bundle-release.yml
+++ b/.github/workflows/bundle-release.yml
@@ -12,11 +12,12 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ github.token }}
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Setup node
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
-          node-version: '14'
+          node-version: '16'
+          cache: 'npm'
       - name: Build
         run: |
           npm ci
