--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "glslify": "^7.1.1",
     "jasmine": "^3.99.0",
     "nyc": "^15.1.0",
-    "rmmz": "github:niokasgami/rpg-maker-mz-typescript",
+    "rmmz": "git+https://git@github.com/niokasgami/rpg-maker-mz-typescript",
     "rollup": "^2.76.0",
     "rollup-plugin-external-globals": "^0.6.1",
     "rollup-plugin-glslify": "^1.3.0",
@@ -41,8 +41,5 @@
     "ts-node": "^9.1.1",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4"
-  },
-  "dependencies": {
-    "@niokasgami/rpg-maker-mz-typescript": "github:niokasgami/rpg-maker-mz-typescript"
   }
 }
